--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+  /* #form{
+    background-color: gray;
+    width: 100%;
+    height: auto;
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
+
+    width: 500px;
+    border-radius: 9px;
+padding: 5px;
+margin-bottom: 10px;
+
+  } */
